--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,4 +93,6 @@ dependencies {
     implementation 'com.github.davidmigloz:drag-to-close:1.1.0'
     implementation 'tm.charlie.androidlib:expandable-textview:2.0.2'
     implementation 'com.arthurivanets.arvi:arvi:1.2.0'
+    implementation 'org.jsoup:jsoup:1.11.3'
+
 }
