--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,4 @@
- apply plugin: 'com.android.application'
+apply plugin: 'com.android.application'
 
 
 android {
@@ -66,7 +66,7 @@ dependencies {
     implementation 'com.github.adroitandroid:ChipCloud:2.2.1'
     implementation 'com.github.JarvanMo:ExoVideoView:2.1.6'
     implementation 'com.henryblue.mxvideoplayer:xvideoplayer:1.1.6'
-    implementation  'com.google.android.exoplayer:exoplayer:2.11.0'
+    implementation 'com.google.android.exoplayer:exoplayer:2.11.0'
     implementation 'com.google.android.exoplayer:exoplayer-core:2.11.0'
     implementation 'com.google.android.exoplayer:exoplayer-dash:2.11.0'
     implementation 'com.google.android.exoplayer:exoplayer-hls:2.11.0'
@@ -94,5 +94,6 @@ dependencies {
     implementation 'tm.charlie.androidlib:expandable-textview:2.0.2'
     implementation 'com.arthurivanets.arvi:arvi:1.2.0'
     implementation 'org.jsoup:jsoup:1.11.3'
+    implementation 'com.r0adkll:slidableactivity:2.1.0'
 
 }
