--- a/.github/workflows/estello.yml
+++ b/.github/workflows/estello.yml
@@ -18,6 +18,6 @@ jobs:
       with:
         java-version: 1.8
     - name: Make gradlew executable
-      run: chmod +x ./gradlew  key  
+      run: chmod +x ./gradlew 
     - name: Build with Gradle
       run: ./gradlew build
