channel video player Impl

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:allowBackup">
-        <activity android:name=".ChannelPostDetails"  android:theme="@style/slidingActivityTheme"></activity>
-        <activity android:name=".ChannelDetails"/>
-        <activity android:name=".SwipeDismissBaseActivity"/>
+        <activity android:name=".VideoPlayerBaseActivity"></activity>
+        <activity
+            android:name=".ChannelPostDetails"
+            android:theme="@style/slidingActivityTheme" />
+        <activity android:name=".ChannelDetails" />
+        <activity android:name=".ChannelVideoPlayerFullScreen"/>
+        <activity android:name=".SwipeDismissBaseActivity" />
         <activity
             android:name=".HashTagsActivity"
             android:theme="@style/slidingActivityTheme" />
