--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,13 +57,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.facebook.keyframes:keyframes:1.1.0'
     implementation 'com.hendraanggrian.appcompat:socialview:0.3-rc1'
-    implementation 'com.allattentionhere:autoplayvideos:0.2.0'
+    //implementation 'com.allattentionhere:autoplayvideos:0.2.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.smarteist:autoimageslider:1.3.2'
     implementation 'com.robertlevonyan.view:MaterialChipView:2.0.4'
     implementation 'com.github.adroitandroid:ChipCloud:2.2.1'
-    implementation 'com.github.JarvanMo:ExoVideoView:2.1.6'
-    implementation 'com.henryblue.mxvideoplayer:xvideoplayer:1.1.6'
+    //implementation 'com.github.JarvanMo:ExoVideoView:2.1.6'
+    //implementation 'com.henryblue.mxvideoplayer:xvideoplayer:1.1.6'
     implementation 'com.google.android.exoplayer:exoplayer:2.11.0'
     implementation 'com.google.android.exoplayer:exoplayer-core:2.11.0'
     implementation 'com.google.android.exoplayer:exoplayer-dash:2.11.0'
