--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:allowBackup">
-        <activity android:name=".DirectMessagesDetails"
-            android:theme="@style/slidingActivityTheme"></activity>
+        <activity android:name=".DirectMessagesDetails"></activity>
         <activity android:name=".VideoPlayerBaseActivity" />
         <activity
             android:name=".ChannelPostDetails"
