--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 
 android {
@@ -40,6 +41,7 @@ dependencies {
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     implementation 'com.facebook.fresco:fresco:1.10.0'
     implementation 'com.romandanylyk:pageindicatorview:1.0.3'
+    implementation 'androidx.palette:palette:1.0.0'
     //implementation 'com.github.bumptech.glide:glide:4.11.0'
     //annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.squareup.okhttp3:okhttp:3.7.0'
@@ -50,7 +52,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     implementation 'de.greenrobot:eventbus:2.4.0'
     implementation 'com.github.clans:fab:1.6.4'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.3.30'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.3.41'
     implementation 'com.github.zhpanvip:viewpagerindicator:1.0.4'
     def lottieVersion = "3.4.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
