--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 
 android {
@@ -42,6 +43,8 @@ dependencies {
     implementation 'com.facebook.fresco:fresco:1.10.0'
     implementation 'com.romandanylyk:pageindicatorview:1.0.3'
     implementation 'androidx.palette:palette:1.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+
     //implementation 'com.github.bumptech.glide:glide:4.11.0'
     //annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.squareup.okhttp3:okhttp:3.7.0'
