--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:allowBackup">
-        <activity android:name=".ExploreCommunityTypeThreeBucketDetails"></activity>
+        <activity android:name=".JoinCommunityActivity"></activity>
+        <activity android:name=".ExploreCommunityTypeThreeBucketDetails" />
         <activity android:name=".ExploreCommunityTypeTwoBucketDetails" />
         <activity android:name=".ExploreCommunityTypeOneBucketDetails" />
         <activity android:name=".ExploreCommunityType1Bucket" />
@@ -48,7 +49,7 @@
         <activity android:name=".MyCourses" />
         <activity android:name=".course_training_page" />
         <activity
-            android:name=".course_details"
+            android:name=".CourseDetails"
             android:label="@string/title_activity_course_details"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ProposedMore" />
